--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.2",
     "express": "^4.18.2",
+    "highcharts": "^11.4.6",
+    "highcharts-angular": "^4.0.0",
     "ngx-color-picker": "^16.0.0",
+    "nxt-color-picker": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
