--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.0.0",
+    "@angular/animations": "^18.1.2",
     "@angular/cdk": "^18.0.3",
     "@angular/common": "^18.0.0",
     "@angular/compiler": "^18.0.0",
@@ -26,8 +26,7 @@
     "express": "^4.18.2",
     "highcharts": "^11.4.6",
     "highcharts-angular": "^4.0.0",
-    "ngx-color-picker": "^16.0.0",
-    "nxt-color-picker": "^18.0.0",
+    "ngx-colors": "^3.6.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
