--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.2",
+    "angular-http-server": "^1.12.0",
     "express": "^4.18.2",
     "highcharts": "^11.4.6",
     "highcharts-angular": "^4.0.0",
