added working lights

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "highcharts-angular": "^4.0.0",
     "ngx-colors": "^3.6.0",
     "rxjs": "~7.8.0",
+    "socket.io": "^4.7.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
